# agi-hpc

./: .gitignore  .taplo.toml  AGI-HPC-README.docx  CITATION.cff  CONTRIBUTING.md  Caddyfile  GLUE_ARCHITECTURE.md  LICENSE.txt  README.docx  README.md  README2.md  WEE3LlJlbW90ZSBEZXNrdG9wIENvbm4-.ica  atlas-chat-events.html  atlas-chat-index.html  atlas-chat-schematic.html  atlas-login.html  atlas-rag-indexer.py  atlas-rag-server.py  create_pr.py  generate_memory_services.py  generate_metacog_service.py  generate_protos.py  generate_safety_services.py  insert_header.py  jira_crawl_pub.py  jira_probe_pub.py  nexus_auto_slow_download.user.js  proto-patch.py  pyproject.toml  pyvenv.cfg  requirements.txt
articles/: atlas-chat-facebook.md  g4g-writeup-outline.docx  g4g-writeup-outline.md  g4g-writeup-v2.docx  g4g-writeup-v3.docx  g4g-writeup-v4.docx  g4g-writeup.docx  g4g-writeup.md  security-radar-cover-email.md  security-radar-proposal.docx  security-radar-proposal.md  turboquant-linkedin.md  ~$curity-radar-proposal.docx  ~$g-writeup-v2.docx  ~$g-writeup-v3.docx  ~$g-writeup.docx
benchmarks/: compression_results.json  debate_benchmark_results.json  differential_results.json  paper_experiment_results.json  weight_compression_ppl.json
birdclef/: extract_features.py  predict.py  train_adversarial.py  train_baseline.py  train_ensemble.py
configs/: dht_config.yaml  env_config.yaml  lh.yaml  lh_config.yaml  memory_config.yaml  meta_config.yaml  nrp_llm_config.yaml  rh.yaml  rh_config.yaml  safety_config.yaml  training_config.yaml
data/: procedural.db
docs/: AGI_ROADMAP.md  API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  ARTEMIS.md  ARTEMIS_AVATAR_ROADMAP.md  ARTEMIS_SPRINT_PLAN.md  ATLAS-AI_DESIGN+OPERATIONS.docx  ATLAS_AI_README.md  ATLAS_OPERATIONS.docx  ATLAS_OPERATIONS.md  CHANGELOG.md  DEPLOYMENT_RUNBOOK.md  DHT_SPRINT_PLAN.md  ENVIRONMENT_SETUP.md  ENVIRONMENT_SPRINT_PLAN.md  ERISML_API.md  ERISML_INTEGRATION_SKETCH.md  EVENT_FABRIC_SPRINT_PLAN.md  HALYARD_SPRINT_PLAN.md  HALYARD_TABLE.md  HALYARD_WORLDBUILDING_PLAN.md  HPC_DEPLOYMENT.md  INTEGRATION_SPRINT_PLAN.md  ISSUE_TRIAGE.md  KNOWLEDGE_GAP_MAPPING_v1_spec.md  LH_SPRINT_PLAN.md  LINKEDIN_ARTICLE_ERISML_INTEGRATION.docx  LINKEDIN_ARTICLE_ERISML_INTEGRATION.md  LINKEDIN_ARTICLE_TENSOR_HOHFELDIAN_SYMMETRY.md  LINKEDIN_ARTICLE_THE_PRIMER.docx  LINKEDIN_ARTICLE_THE_PRIMER.md  LLM_SPRINT_PLAN.md  MASTER_IMPLEMENTATION_PLAN.md  MEMORY_SPRINT_PLAN.md  METACOGNITION_SPRINT_PLAN.md  METRICS_INVENTORY.md  ONCALL_PLAYBOOK.md  RH_SPRINT_PLAN.md  ROADMAP.md  SAFETY_SPRINT_PLAN.md  (+6 more)
nemotron/: Dockerfile.nrp  bootstrap_nrp.sh  nemotron_baseline.py  nemotron_nrp.py  setup_hpc.sh  submit_nemotron.sh  submit_nrp.py  train_hpc.py
proto/: env.proto  erisml.proto  lh.proto  memory.proto  meta.proto  plan.proto  rh.proto  safety.proto
scripts/: README.md  activate  activate.bat  atlas_manager.py  avatar3d_synced_smoke.py  benchmark_artemis_tts.py  benchmark_atlas_compression.py  benchmark_compressed_search.py  benchmark_compression.py  benchmark_funnel_search.py  benchmark_search_tiers.py  benchmark_tqpro_integration.py  benchmark_turboquant_kv.py  blender_smoke.py  blender_tour.py  bootstrap.sh  collect_gpu_power_trace.py  compile_wiki.py  council_eval.py  download_daemon.py  embed_publications.py  ethics_corpora_pipeline.py  ethics_fix_sefaria_chinese.py  ethics_gpu_embed.py  eval_weight_compression.py  finetune_gemma4_ethics.py  fix_udhr.py  generate_handouts.py  generate_memory_services.py  generate_metacog_service.py  generate_safety_services.py  generate_services.py  harvest_academic_sources.py  index_all_corpora.py  install_artemis_xtts.sh  llm_adaptive_proxy.py  migrate_ethics_pca384.py  nvlink_hack.sh  nvlink_save_state.sh  paper_experiments.py  (+18 more)
tests/: diag_training.py  smoke_test_training.py  test_basic.py  test_dcgm_attestation.py
wiki/: sensei_task_013.md  sensei_task_020.md  sensei_task_025.md  sensei_task_028.md  (+18 more)
(+725 files in other folders)
