[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-hpc"
version = "0.1.0"
description = "AGI-HPC: A Freudian cognitive architecture with safety-gated reasoning, biological dreaming, and graduated autonomy"
readme = "docs/ATLAS_AI_README.md"
license = {text = "AGI-HPC Responsible AI License v1.0"}
requires-python = ">=3.10"
authors = [
    {name = "Andrew H. Bond", email = "agi.hpc@gmail.com"},
]
keywords = [
    "cognitive-architecture", "agi", "safety", "ethics", "dreaming",
    "gemma", "freud", "dual-process", "hpc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "flask>=3.0",
    "numpy>=1.26",
    "openai>=1.40",
    "psycopg2-binary>=2.9",
    "PyJWT>=2.8",
    "pyyaml>=6.0",
    "requests>=2.31",
    "sentence-transformers>=2.6",
]

[project.optional-dependencies]
nats = ["nats-py>=2.7"]
training = ["gymnasium>=0.29"]
dev = [
    "black==26.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff==0.14.8",
]

[project.urls]
Homepage = "https://atlas-sjsu.duckdns.org"
Repository = "https://github.com/ahb-sjsu/atlas-ai"
Documentation = "https://github.com/ahb-sjsu/atlas-ai/blob/main/docs/ATLAS_AI_README.md"

[project.scripts]
atlas-dm = "agi.training.dungeon_master:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E402"]  # Module-level imports after try/except

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
